# matsuzawa-20260304-cloud

./: package-lock.json  pyproject.toml
.github/scripts/: cloud-gpu-runner.sh
.github/workflows/: run_on_cloud_runner.yml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
config/: config.yaml  evaluate.yaml
config/run/: comparative-0-baseline-gsm8k.yaml  proposed-jamcot-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  preprocess.py
