[project]
name = "jam-cot-experiment"
version = "0.1.0"
description = "JAM-CoT prompt tuning experiment on GSM8K"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "openai>=1.0.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: hatchling cannot find files to ship - "Unable to determine which files to ship inside the wheel"
# [CAUSE]: No directory named 'jam_cot_experiment' exists, and no explicit packages configuration provided
# [FIX]: Added tool.hatch.build.targets.wheel.packages to point to src/ directory
#
# [OLD CODE]:
# (no hatch configuration was present)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]